# api/docs/swagger.yaml
@@ -1,5 +1,192 @@
 basePath: /
 definitions:
+  movieservice.AddMovieReq:
+    properties:
+      age_limit:
+        type: integer
+      background_image_url:
+        type: string
+      bio:
+        type: string
+      genres:
+        items:
+          $ref: '#/definitions/movieservice.Genres'
+        type: array
+      language:
+        type: string
+      movie_name:
+        type: string
+      movie_url:
+        type: string
+      season:
+        type: integer
+      studio:
+        type: string
+    type: object
+  movieservice.AddMovieRes:
+    properties:
+      message:
+        type: string
+    type: object
+  movieservice.CommentModel:
+    properties:
+      created_at:
+        type: string
+      deleted_at:
+        type: integer
+      description:
+        type: string
+      id:
+        type: string
+      movie_id:
+        type: string
+      rate:
+        type: integer
+      updated_at:
+        type: string
+      user_id:
+        type: string
+    type: object
+  movieservice.CreateCommentReq:
+    properties:
+      description:
+        type: string
+      movie_id:
+        type: string
+      rate:
+        type: integer
+      user_id:
+        type: string
+    type: object
+  movieservice.CreateCommentRes:
+    properties:
+      comment:
+        $ref: '#/definitions/movieservice.CommentModel'
+    type: object
+  movieservice.DeleteCommentReq:
+    properties:
+      id:
+        type: string
+    type: object
+  movieservice.DeleteCommentRes:
+    properties:
+      success:
+        type: boolean
+    type: object
+  movieservice.DeleteMovieReq:
+    properties:
+      id:
+        type: string
+    type: object
+  movieservice.DeleteMovieRes:
+    properties:
+      success:
+        type: boolean
+    type: object
+  movieservice.Genres:
+    properties:
+      genre:
+        type: string
+    type: object
+  movieservice.GetAllCommentsRes:
+    properties:
+      comments:
+        items:
+          $ref: '#/definitions/movieservice.CommentModel'
+        type: array
+    type: object
+  movieservice.GetAllMoviesRes:
+    properties:
+      movies:
+        items:
+          $ref: '#/definitions/movieservice.MovieModel'
+        type: array
+      total_count:
+        type: integer
+    type: object
+  movieservice.GetCommentRes:
+    properties:
+      comment:
+        $ref: '#/definitions/movieservice.CommentModel'
+    type: object
+  movieservice.GetMovieByIdRes:
+    properties:
+      Res:
+        $ref: '#/definitions/movieservice.MovieModel'
+    type: object
+  movieservice.MovieModel:
+    properties:
+      age_limit:
+        type: integer
+      background_image_url:
+        type: string
+      bio:
+        type: string
+      created_at:
+        type: string
+      genres:
+        items:
+          $ref: '#/definitions/movieservice.Genres'
+        type: array
+      id:
+        type: string
+      language:
+        type: string
+      movie_name:
+        type: string
+      movie_url:
+        type: string
+      season:
+        type: integer
+      studio:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  movieservice.UpdateCommentReq:
+    properties:
+      description:
+        type: string
+      id:
+        type: string
+      rate:
+        type: integer
+    type: object
+  movieservice.UpdateCommentRes:
+    properties:
+      comment:
+        $ref: '#/definitions/movieservice.CommentModel'
+    type: object
+  movieservice.UpdateMovieReq:
+    properties:
+      age_limit:
+        type: integer
+      background_image_url:
+        type: string
+      bio:
+        type: string
+      genres:
+        items:
+          $ref: '#/definitions/movieservice.Genres'
+        type: array
+      id:
+        type: string
+      language:
+        type: string
+      movie_name:
+        type: string
+      movie_url:
+        type: string
+      season:
+        type: integer
+      studio:
+        type: string
+    type: object
+  movieservice.UpdateMovieRes:
+    properties:
+      success:
+        type: boolean
+    type: object
   userservice.AdminModel:
     properties:
       created_at:
@@ -360,6 +547,332 @@ paths:
       summary: Update admin details
       tags:
       - admin
+  /comment/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves details of a comment by its ID
+      parameters:
+      - description: Comment ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success Response
+          schema:
+            $ref: '#/definitions/movieservice.GetCommentRes'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get comment details by ID
+      tags:
+      - comment
+  /comment/add:
+    post:
+      consumes:
+      - application/json
+      description: Adds a new comment with the provided details
+      parameters:
+      - description: Comment Add Request
+        in: body
+        name: createCommentReq
+        required: true
+        schema:
+          $ref: '#/definitions/movieservice.CreateCommentReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success Response
+          schema:
+            $ref: '#/definitions/movieservice.CreateCommentRes'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Add a new comment
+      tags:
+      - comment
+  /comment/all:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves a list of all comments with optional filters
+      parameters:
+      - description: Filter by user ID
+        in: query
+        name: user_id
+        type: string
+      - description: Filter by movie ID
+        in: query
+        name: movie_id
+        type: string
+      - description: Filter by rating
+        in: query
+        name: rate
+        type: integer
+      - description: Limit the number of results
+        in: query
+        name: limit
+        type: integer
+      - description: Offset for pagination
+        in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully retrieved list of comments
+          schema:
+            $ref: '#/definitions/movieservice.GetAllCommentsRes'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get all comments
+      tags:
+      - comment
+  /comment/delete:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes a comment by its ID
+      parameters:
+      - description: Comment Delete Request
+        in: body
+        name: deleteCommentReq
+        required: true
+        schema:
+          $ref: '#/definitions/movieservice.DeleteCommentReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success Response
+          schema:
+            $ref: '#/definitions/movieservice.DeleteCommentRes'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Delete a comment
+      tags:
+      - comment
+  /comment/update:
+    put:
+      consumes:
+      - application/json
+      description: Updates the details of a comment by its ID
+      parameters:
+      - description: Comment Update Request
+        in: body
+        name: updateCommentReq
+        required: true
+        schema:
+          $ref: '#/definitions/movieservice.UpdateCommentReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success Response
+          schema:
+            $ref: '#/definitions/movieservice.UpdateCommentRes'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Update comment details
+      tags:
+      - comment
+  /movie/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves details of a movie by its ID
+      parameters:
+      - description: Movie ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success Response
+          schema:
+            $ref: '#/definitions/movieservice.GetMovieByIdRes'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get movie details by ID
+      tags:
+      - movie
+  /movie/add:
+    post:
+      consumes:
+      - application/json
+      description: Adds a new movie with the provided details
+      parameters:
+      - description: Movie Add Request
+        in: body
+        name: addMovieReq
+        required: true
+        schema:
+          $ref: '#/definitions/movieservice.AddMovieReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success Response
+          schema:
+            $ref: '#/definitions/movieservice.AddMovieRes'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Add a new movie
+      tags:
+      - movie
+  /movie/all:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves a list of all movies with optional filters
+      parameters:
+      - description: Filter by movie name
+        in: query
+        name: name
+        type: string
+      - description: Filter by studio
+        in: query
+        name: studio
+        type: string
+      - description: Filter by genre
+        in: query
+        name: genre
+        type: string
+      - description: Limit the number of results
+        in: query
+        name: limit
+        type: integer
+      - description: Offset for pagination
+        in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully retrieved list of movies
+          schema:
+            $ref: '#/definitions/movieservice.GetAllMoviesRes'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get all movies
+      tags:
+      - movie
+  /movie/delete:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes a movie by its ID
+      parameters:
+      - description: Movie Delete Request
+        in: body
+        name: deleteMovieReq
+        required: true
+        schema:
+          $ref: '#/definitions/movieservice.DeleteMovieReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success Response
+          schema:
+            $ref: '#/definitions/movieservice.DeleteMovieRes'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Delete a movie
+      tags:
+      - movie
+  /movie/update:
+    put:
+      consumes:
+      - application/json
+      description: Updates the details of a movie by its ID
+      parameters:
+      - description: Movie Update Request
+        in: body
+        name: updateMovieReq
+        required: true
+        schema:
+          $ref: '#/definitions/movieservice.UpdateMovieReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success Response
+          schema:
+            $ref: '#/definitions/movieservice.UpdateMovieRes'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Update movie details
+      tags:
+      - movie
   /user/{id}:
     get:
       consumes:
